Fix IP filter widget list not getting registered at startup

BUG: 281245